Add '--add-modules=java.corba' for pvAccess